# claude-telemetry

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  bootstrap.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish-pypi.yml
agent/: README.md  pyproject.toml
agent/claude_telemetry/: __init__.py  __main__.py  cli.py  collector.py  config.py  daemon.py  extras.py  hook_sync.py  logging_config.py  mcp_server.py  models.py  sync.py
agent/claude_tracker/: __init__.py  __main__.py  cli.py  collector.py  config.py  daemon.py  models.py  sync.py
agent/tests/: test_collector.py  test_extras.py  test_sync.py
agent/tests/fixtures/: daily_instances.json  history.jsonl  session_output.json  stats-cache.json
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  wrangler.toml
dashboard/functions/: _middleware.ts  tsconfig.json
dashboard/functions/api/: _lib.ts  analytics-compare-periods.ts  analytics-trends.ts  blocks.ts  cron-check-notifications.ts  daily-usage.ts  delete-machine.ts  export-daily.ts  export-sessions.ts  generate-agent-config.ts  ingest.ts  machine-summary.ts  machines.ts  preferences.ts  project-costs.ts  rate-limits.ts  sessions.ts  stats-extra.ts  usage-summary.ts  weekly-estimate.ts
dashboard/functions/api/auth/: callback.ts  login.ts  me.ts
dashboard/functions/api/cron/: check-notifications.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: ConfirmDeleteModal.tsx  ErrorBoundary.tsx  ModelBadge.tsx  Spinner.tsx
dashboard/src/components/cards/: MachineCard.tsx  MetricCard.tsx
dashboard/src/components/charts/: DailyCostChart.tsx  ModelBreakdown.tsx  MonthlyCostChart.tsx
dashboard/src/components/filters/: DateRangePicker.tsx
dashboard/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/src/contexts/: AuthContext.tsx
dashboard/src/hooks/: useAlertThresholds.ts  useMachineFilter.tsx  usePreferences.ts  useUsageData.ts
dashboard/src/lib/: api.ts  colors.ts  constants.ts  dateUtils.ts  machineStatus.ts  queries.ts  rateLimits.ts
dashboard/src/pages/: Blocks.tsx  Daily.tsx  Deploy.tsx  Insights.tsx  Login.tsx  Machines.tsx  Models.tsx  Overview.tsx  Projects.tsx  Sessions.tsx  Settings.tsx
dashboard/src/styles/: globals.css
neon/: schema.sql
neon/migrations/: 002-fable-cost.sql
supabase/: README.md
supabase/migrations/: 001_initial_schema.sql  002_stats_extra_unique.sql  005_notifications.sql  006_weekly_reset_at.sql
