[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-telemetry"
version = "0.3.0"
description = "Lightweight agent for centralized Claude Code token usage tracking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Ryan Barbosa", email = "ryan@ryanbarbosa.com"}]
keywords = ["claude", "usage", "tracking", "telemetry"]
dependencies = [
    "httpx>=0.27",
    "supabase>=2.0",
    "click>=8.1",
    "python-dateutil>=2.9",
    "mcp>=1.0",
]

[project.urls]
Repository = "https://github.com/RyanTech00/claude-telemetry"
Issues = "https://github.com/RyanTech00/claude-telemetry/issues"

[project.scripts]
cc-telemetry = "claude_telemetry.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
]
