[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-telemetry"
version = "0.3.4"
description = "Multi-PC Claude Code usage tracker — agent, real-time hooks, MCP server, and dashboard sync"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Ryan Barbosa"}]
keywords = ["claude", "claude-code", "usage", "tracking", "telemetry", "mcp", "tokens", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "supabase>=2.0",
    "click>=8.1",
    "python-dateutil>=2.9",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://claude-telemetry.ryanbarbosa.com"
Documentation = "https://claude-telemetry.ryanbarbosa.com/guide/getting-started"
Repository = "https://github.com/RyanTech00/claude-telemetry"
Issues = "https://github.com/RyanTech00/claude-telemetry/issues"
Changelog = "https://github.com/RyanTech00/claude-telemetry/releases"

[project.scripts]
cc-telemetry = "claude_telemetry.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "build",
]