[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

# Single source of truth for the version: claude_telemetry.__version__.
# pyproject reads it at build time (see [tool.setuptools.dynamic]) so the
# package metadata and the CLI's --version can never drift apart again.
[tool.setuptools.dynamic]
version = {attr = "claude_telemetry.__version__"}

[project]
name = "cc-telemetry"
dynamic = ["version"]
description = "Multi-PC Claude Code usage tracker — agent, real-time hooks, MCP server, and dashboard sync"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Ryan Barbosa"}]
keywords = ["claude", "claude-code", "usage", "tracking", "telemetry", "mcp", "tokens", "cost"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "python-dateutil>=2.9",
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/seosieve/claude-telemetry"
Documentation = "https://github.com/seosieve/claude-telemetry#readme"
Repository = "https://github.com/seosieve/claude-telemetry"
Issues = "https://github.com/seosieve/claude-telemetry/issues"
Changelog = "https://github.com/seosieve/claude-telemetry/releases"

[project.scripts]
cc-telemetry = "claude_telemetry.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-cov>=5.0",
    "build",
]